# c_compiler

./: .clangd  .gitignore  AGENTS.md  CLI_IMPROVEMENT_PLAN.md  CMakeLists.txt  EXECUTABLE_LINKING_PLAN.md  Failed_tests.txt  IMPROVEMENT_PLAN.md  LICENSE  README.md  STORAGE_CLASS_PLAN.md  TESTING_GUIDE.md  UNSUPPORTED_FEATURES.md  a.out.ll  first.ll  is it legal for unions to have the same .txt  qualified_vars_plan.md  remaining_rules.txt  segfault_test  test_out  typedef_as_an_alias.txt
.github/: copilot-instructions.md
.opencode/plans/: refactoring_plan.md
c_compiler/: tasks.md
docs/: IMPLEMENTATION_PROGRESS.md  SCOPE_AWARE_STRUCTS_PLAN.md  SEPARATE_TYPE_LISTS_PLAN.md  STATEMENT_EXPRESSION_PLAN.md  typed_value_implementation_plan.md  typed_value_refactoring_plan.md
new_tests/: header.h  run_tests.sh  test_char.c  test_const_int_error.c  test_const_pointer_const_ptr.c  test_const_pointer_to_const.c  test_const_postfix_increment_error.c  test_const_struct_no_init.c  test_includes.c  test_nested_typedefs.c  test_typedef_tagged_forward.c
new_tests/output/: test_char.err  test_char.ll
self_build/: Makefile
skills/: ast-handling-skill.md  parser-grammar-skill.md  type-descriptor-skill.md
src/: CMakeLists.txt  ast_node_name.c  ast_node_name.h  ast_print.c  ast_print.h  binary_expression_processor.c  binary_expression_processor.h  builtin_types.c  builtin_types.h  c_grammar.gdl  c_grammar_ast.h  c_grammar_ast_actions.c  c_grammar_ast_actions.h  callbacks.h  compound_literal_processor.c  compound_literal_processor.h  debug.c  debug.h  declaration_handler.c  declaration_handler.h  enum_evaluation.c  enum_evaluation.h  generator_lists.c  generator_lists.h  generic_hash_table.c  generic_hash_table.h  hash_table.c  hash_table.h  ir_gen_error.c  ir_gen_error.h  ir_utils.c  ir_utils.h  labels.c  labels.h  llvm_ir_generator.c  llvm_ir_generator.h  llvm_typed_value.c  llvm_typed_value.h  main.c  scope.c  (+26 more)
tests/: 3.c  3a.c  cast_ast.txt  first.c  run_tests.sh  second.c  test_adding_boolean.c  test_alignof_long.c  test_anon_struct_arrow.c  test_anon_struct_arrow_simple.c  test_anon_union.c  test_array_align.c  test_array_struct_ptr.c  test_array_subscript_using_variable.c  test_array_subscript_using_variable_basic.c  test_array_variable_index.c  test_arrays.c  test_arrays_basic.c  test_arrays_multi_dim.c  test_arrays_multi_dim.ll  test_arrays_multi_dim_simple.c  test_arrow_access.c  test_arrow_struct_ptr.c  test_assign.c  test_assign_2.c  test_assign_to_global_char_array.c  test_assign_to_pointer_to_const.c  test_basic_cast_expression.c  test_bitfields.c  test_bitfields_simple.c  test_bitwise.c  test_bool.c  test_bool_simple.c  test_bool_simple_with_not.c  test_bswap_64.c  test_cast_member.c  test_chained_ternary.c  test_clz.c  test_comma_operator_simple.c  test_complex_printf.c  (+155 more)
tests/expected_to_fail/: test_const_assignment_error.c  test_const_pointer_struct.c  test_const_pointer_to_const.c  test_const_pointer_to_const_ptr.c  test_const_pointer_to_const_ptr_nested.c  test_const_struct.c  test_const_struct_direct.c  test_duplicate_function.c  test_ptr_to_const_deref.c_disabled  test_reassign_const_pointer_should_fail.c  test_syntax_error.c  test_typedef_different_types_should_fail.c
tests/not_yet/: test_bitfields.c  test_comma_operator.c  test_enum.c  test_float_literals.c  test_function_calls.c  test_function_calls_1.c  test_function_calls_5.c  test_long_long.c  test_loops.c  test_mixed_struct_typedef.c  test_pointers.c  test_relational_equality.c  test_string_literals.c  test_tagged_struct.c  test_tagged_typedef_different_name.c  test_tagged_typedef_same_name.c  test_ternary.c  test_typedef_enum_fwd_declare.c  test_untagged_struct_typedef.c  test_untagged_union_typedef.c
